Add stepper reduction

--- a/data/setup.htm
+++ b/data/setup.htm
@@ -95,6 +95,7 @@
 			<label data-i18n-key="stepperReduction">Stepper reduction factor:</label>&nbsp;<input type="number" id="stepperReduction" min="0" max="1" style="width:60px" onchange="changed(this);"><br>
 			<label data-i18n-key="driverMinimalMicroSec">Delay between commands (µs):</label>&nbsp;<input type="number" id="driverMinimalMicroSec" min="1" max="100" style="width:60px" onchange="changed(this);"><br>
 			<label data-i18n-key="requiredRPM">Turntable RPM:</label>&nbsp;<input type="number" id="requiredRPM" min="0" max="6" style="width:60px" onchange="changed(this);"><br>
+			<label data-i18n-key="stepperReduction">Stepper reduction</label>&nbsp;<input type="number" id="afterSoundDuration" min="1" max="50" style="width:60px" onchange="changed(this);"><br>
 			<label data-i18n-key="adjustPosition">Adjust position</label>&nbsp;<input type="checkbox" id="adjustPosition" onchange="changed(this);"><br>
 			<hr />
 			<label data-i18n-key="enableEncoder">Use encoder</label>&nbsp;<input type="checkbox" id="enableEncoder" onchange="changed(this);"><br>
