--- a/data/setup.htm
+++ b/data/setup.htm
@@ -109,14 +109,18 @@
 			<hr />
 			<label data-i18n-key="radius">Sensitive zones radius:</label>&nbsp;<input type="number" id="radius" min="10" max="55" style="width:60px" onchange="changed(this);"><br>
 			<label data-i18n-key="maxDelta">Sensitive zones width:</label>&nbsp;<input type="number" id="maxDelta" min="1" max="10" style="width:60px" onchange="changed(this);"><br>
+			<label data-i18n-key="enableCircles">Show track number in circle</label>&nbsp;<input type="checkbox" id="enableCircles" onchanges="changed(this);"><br>
 			<hr />
 			<label data-i18n-key="enableSound">Activate sound</label>&nbsp;<input type="checkbox" id="enableSound" onchange="changed(this);"><br>
 			<label data-i18n-key="soundVolume">Sound volume:</label>&nbsp;<input type="number" id="soundVolume" min="1" max="30" style="width:60px" onchange="changed(this);"><br>
 			<label data-i18n-key="beforeSoundIndex">Before rotation sound index:</label>&nbsp;<input type="number" id="beforeSoundIndex" min="0" max="256" style="width:60px" onchange="changed(this);"><br>
 			<label data-i18n-key="beforeSoundDuration">Before rotation sound rotation:</label>&nbsp;<input type="number" id="beforeSoundDuration" min="0.1" max="10" style="width:60px" onchange="changed(this);"><br>
+			<input type="button" style="width:200px" data-i18n-key="testBeforeSound" value="Test before rotaton sound" onclick="testSound(1);"/><br>
 			<label data-i18n-key="moveSoundIndex">During rotation sound index:</label>&nbsp;<input type="number" id="moveSoundIndex" min="0" max="256" style="width:60px" onchange="changed(this);"><br>
+			<input type="button" style="width:200px" data-i18n-key="testDuringSound" value="Test during rotation sound" onclick="testSound(2);"/><br>
 			<label data-i18n-key="afterSoundIndex">After rotation sound index:</label>&nbsp;<input type="number" id="afterSoundIndex" min="0" max="256" style="width:60px" onchange="changed(this);"><br>
 			<label data-i18n-key="afterSoundDuration">After rotation sound duration:</label>&nbsp;<input type="number" id="afterSoundDuration" min="0.1" max="10" style="width:60px" onchange="changed(this);"><br>
+			<input type="button" style="width:200px" data-i18n-key="testAfterSound" value="Test after rotation sound" onclick="testSound(3);"/><br>
 			<hr />
 			<label data-i18n-key="ssid">Wifi SSID:</label>&nbsp;<input type="text" id="ssid" maxlen="32" size="32" onchange="changed(this);"><br>
 			<label data-i18n-key="pwd">Password:</label>&nbsp;<input type="text" id="pwd" maxlen="32" size="32" onchange="changed(this);"><br>
