--- a/data/setup.htm
+++ b/data/setup.htm
@@ -104,6 +104,7 @@
 			<label data-i18n-key="inertiaAngleStopping">Angle before slowing down:</label>&nbsp;<input type="number" id="inertiaAngleStopping" min="0.1" max="10" style="width:60px" onchange="changed(this);"><br>
 			<label data-i18n-key="invertStepper">Invert stepper rotation</label>&nbsp;<input type="checkbox" id="invertStepper" onchange="changed(this);"><br>
 			<label data-i18n-key="adjustPosition">Adjust position</label>&nbsp;<input type="checkbox" id="adjustPosition" onchange="changed(this);"><br>
+			<label data-i18n-key="ledOnWhenHigh">Light rotation LED on high signal:</label>&nbsp;<input type="checkbox" id="ledOnWhenHigh" onchange="changed(this);"><br>
 			<hr />
 			<label data-i18n-key="enableEncoder">Use encoder</label>&nbsp;<input type="checkbox" id="enableEncoder" onchange="changed(this);"><br>
 			<label data-i18n-key="slaveId">Slave id:</label>&nbsp;<input type="number" id="slaveId" min="0" max="255" style="width:60px" onchange="changed(this);"><br>
